--- a/conﬁguration.properties
+++ b/conﬁguration.properties
@@ -11,3 +11,9 @@ address_password=Test1234!
 app_url=https://www.bluerentalcars.com/
 app_customer_username=customer@bluerentalcars.com
 app_customer_password=12345
+app_customer_name=John Walker
+aap_drop_time=2000
+app_drop_date=20062023
+app_creditcard_no=1111222233334444
+app_creditcard_expiry=1025
+app_creditcard_cvc=123
